--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en">  
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "srsanchez", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Serviciu privat</title>
-<meta content='https://i.postimg.cc/4y5Qm3Nb/Screenshot-281.png' property='og:image'/>
+<title>cel mai bun serviciu</title>
+<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Photo Gallery</title>
 <div class="layer">
 </div>
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="" alt="">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Imi ofer servicii de sex la domiciliu, dansuri si masaje erotice, ai vrea sa-mi vezi catalogul?</div>
+Imi ofer servicii sexuale, dansuri si masaje erotice acasa, ai vrea sa-mi vezi catalogul?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Da
@@ -36,18 +34,20 @@ Nu
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-OBSERVA! Sunteți de acord să respectați următoarele femei? Dacă cunoști pe cineva, nu-i spune și nu răspândi zvonuri.</div>
+Felicitări!
+<p>
+Ai fost aleasă la întâmplare să mulțumești o fată gratuit, trebuie să te înregistrezi pentru a-ți confirma prezența, apăsând "INTRA" mai jos, completează formularul și bucură-te de sex vaginal, sex anal și multe altele Din nou...</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Chorizo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Srsanchez}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">INTRA
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://video.twimg.com/ext_tw_video/1526551323147223045/pu/vid/508x856/k64RKE5mt_-cP8hL.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/286701/1707471632/images/5.mp4 " type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
