--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "srsanchez", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script> 
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "odin100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Nopți Perfecte</title> 
-<meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
+<title>Întâlniri Discrete</title>
+<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>GALERIE FOTO</title>
+<title>Galerie Foto</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -24,30 +24,30 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Vom ajunge la domiciliul dumneavoastră noaptea, serviciu disponibil în tot orașul. Doriți să vedeți catalogul meu?</div>
+Ofer servicii sexuale, dans și masaje erotice la tine acasă, vrei să vezi catalogul meu?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Nu
+Da
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Da
+Nu
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-AVERTISMENT! Acceptați să respectați femeile pe care le veți întâlni mai târziu? Dacă cunoașteți pe cineva, nu îi spuneți și nu răspândiți zvonuri.... </div>
+!AVERTISMENT! Ești de acord să respecți femeile pe care le vei întâlni mai departe? Dacă cunoști pe cineva, nu le spune nimănui sau nu răspândi zvonuri.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://shrlc.com/f6HmOkQ" class="step-btn submit-btn tr-submit-button showmail">SUNT DE ACORD
+<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Odin}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">Participă
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn77-vid-mp4.xvideos-cdn.com/NrI-9u_A9xGDFVqrq1cCLw==,1737966589/videos/mp4/7/2/5/xvideos.com_725b860aa69386510f8343555c9a0e59.mp4?ui=MTg2Ljg5LjI1MC40Ny05MjkzNTc0MTktL3ZpZGVvLm90aXZmaW05MmRlL2xhX3ZhcXVlcmFf" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
